tests/baselines/reference/typeTagModuleExports.errors.txt
tests/cases/conformance/jsdoc/bug27327.js(2,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/jsdoc/bug27327.js (1 errors) ====
    /** @type {string} */
    module.exports = 0;
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    